tests/error_tests/type_loop.err
resolver error: type inference cycle
 ==> ./tests/error_tests/type_loop.tau:2:5
2 |    y: int = y;
  |    ^ loop detected
  |    ^ type definition depends on itself
  |             ^
